--- a/JWTAuthDemo/appsettings.json
+++ b/JWTAuthDemo/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Data Source=DESKTOP;Initial Catalog=JwtDemoDb;User ID=commanderapi;Password=nemaljubavi;Connect Timeout=30;Encrypt=False;TrustServerCertificate=False;ApplicationIntent=ReadWrite;MultiSubnetFailover=False"
+    "DefaultConnection": "Data Source=DESKTOP;Initial Catalog=JwtDemoDb;User ID=commanderapi;Password=nemaljubavi;Connect Timeout=30;Encrypt=False;TrustServerCertificate=False;ApplicationIntent=ReadWrite;MultiSubnetFailover=False;MultipleActiveResultSets=True;"
   },
   "Logging": {
     "LogLevel": {
